--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     text-align: center;
 }
 
-/* HEADER */
+/*--------------- HEADER ---------------*/
 
 header {
     background-color: black;
@@ -63,7 +63,7 @@ background-color: chartreuse;
 color: black;
 }
 
-/* MAIN */
+/*--------------- MAIN ---------------*/
 main {
     background-color: black;
 }
@@ -90,7 +90,7 @@ main {
     padding-bottom: 35px;
 }
 
-/* FOOTER */
+/*--------------- FOOTER ---------------*/
 
 footer {
     background-color: chartreuse;
