--- a/styles.css
+++ b/styles.css
@@ -41,16 +41,14 @@ align-items: inherit !important;
 }
 
 /* carrito */
-
-.carritoButtom {
-    border-radius: 5px;
-    border-color: black;
-}
-
 .carritoImg {
     background-color: chartreuse;
 }
 
+.carrito-titulo {
+    color: chartreuse;
+    text-shadow: 2px 2px 0 #000000, 2px -2px 0 #000000, -2px -2px 0 #000000,;
+}
 .carritoCuerpo {
     background-color:dimgray;
     color: black;
@@ -62,7 +60,6 @@ align-items: inherit !important;
     gap: 1rem;
     margin-top: 5px;
     margin-bottom: 5px
-
 }
 .carritoHtml{
     width: 100%;
@@ -94,12 +91,6 @@ align-items: inherit !important;
     border-radius: 5px;
 }
 
-/* buscador */
-.buscar-btn {
-background-color: chartreuse;
-color: black;
-}
-
 /*--------------- MAIN ---------------*/
 main {
     background-color: black;
@@ -108,6 +99,16 @@ main {
 #bebidas {    
     display: flex;
     justify-content: space-around;
+    align-content: center;
+}
+
+.bebidasImg {
+    align-content: center;
+    min-width: 50px;
+    max-width: 60px;
+    /* min-height: 60px; */
+    max-height: 110px;
+    
 }
 
 .margen {
