--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,17 @@ color: black;
 /*--------------- MAIN ---------------*/
 main {
     background-color: black;
+    padding: 60px;
+    padding-top: 0px;
 }
 
-#bebidas {    
+.bebidasList {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    grid-auto-columns: minmax(1, 3) !important;
+   
 }
+
 
 .margen {
     margin-bottom: 50px;
