--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 /*--------------- HEADER ---------------*/
 
 header {
-    background-color: black;
+  background-color: black;
     padding-top: 35px;
     padding-bottom: 35px;
 }
@@ -38,6 +38,7 @@ align-items: inherit !important;
 }
 .offcanvas {
     overflow: scroll;
+    
 }
 
 /* carrito */
@@ -92,23 +93,55 @@ align-items: inherit !important;
 }
 
 /*--------------- MAIN ---------------*/
-main {
-    background-color: black;
-    padding: 60px;
+main { 
+      padding: 60px;
+      background: rgb(0,0,0);
+background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(100,100,100,1) 100%);
     padding-top: 0px;
+    justify-content: center;
 }
 
 .bebidasList {
-    display: flex;
-    flex-direction: column;
-    grid-auto-columns: minmax(1, 3) !important;
+ display: flex;
+flex-wrap: wrap;
+gap: 2rem;
+
+  
    
 }
 
-
-.margen {
+.card {
     margin-bottom: 50px;
+    border-radius: 11px;
+    background-color: rgba(100, 100 , 100, 0.8);
+    color: white;
+    box-shadow:  0px 10px 30px 0px rgba(100,100,100,0.4);
+
 }
+
+
+.card img {
+    
+  object-fit: contain;
+  width: auto;
+ 
+  height: 250px;
+}
+
+.card button {
+    border: none;
+    font-family: Helvetica, sans-serif;
+    font-weight: 600;
+    padding: 3%;
+    width: 100%;
+    border-radius: 11px;
+}
+
+.card button:hover {
+    background-color: black;
+    color:chartreuse
+}
+
 
 .carritoYWishBtn {
     background-color: chartreuse;
