--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 /*--------------- HEADER ---------------*/
 
 header {
-  background-color: black;
+    background-color: black;
     padding-top: 35px;
     padding-bottom: 35px;
 }
@@ -94,20 +94,18 @@ align-items: inherit !important;
 
 /*--------------- MAIN ---------------*/
 main { 
-      padding: 60px;
-      background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(100,100,100,1) 100%);
+    padding: 60px;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(100,100,100,1) 100%);
     padding-top: 0px;
     justify-content: center;
 }
 
 .bebidasList {
- display: flex;
-flex-wrap: wrap;
-gap: 2rem;
-
-  
-   
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
 }
 
 .card {
@@ -121,11 +119,9 @@ gap: 2rem;
 
 
 .card img {
-    
-  object-fit: contain;
-  width: auto;
- 
-  height: 250px;
+    object-fit: contain;
+    width: auto;
+    height: 250px;
 }
 
 .card button {
