--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,11 @@ header {
     border-color: #000000;
 }
 
+/*--------------- ultimo modal ---------------*/
+.ok {
+  background-color: chartreuse;
+}
+
 /*--------------- MAIN ---------------*/
 main {
   padding: 60px;
